--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,10 @@ services:
     command: [
       '--character-set-server=utf8mb4',
     ]
-    ports:
-    - "3306:3306"
+    expose:
+    - "3306"
+#    ports:
+#    - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: "Hitosea@123.."
       MYSQL_DATABASE: coss
