--- a/interface/user/config/config.yaml
+++ b/interface/user/config/config.yaml
@@ -6,7 +6,7 @@ log:
 
 mysql:
   addr: "mysql:3306"
-  dsn: "root:Hitosea@123..@tcp(mysql:3306)/bbq?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8,utf8mb4"
+  dsn: "root:888888@tcp(mysql:33066)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8,utf8mb4"
   readDSN:
     - "root:Hitosea@123..@tcp(mysql:3306)/bbq?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8,utf8mb4"
   idleTimeout: "4h"
@@ -41,3 +41,10 @@ discovers:
     addr: "user_service:10002"
     dial: "3000ms"
     timeout: "5000ms"
+
+encryption:
+  enabled: true
+  name: coss-im
+  email: max.mustermann@example.com
+  passphrase: LongSecret
+  rsaBits: 2048
