--- a/service/group/config/config.yaml
+++ b/service/group/config/config.yaml
@@ -6,7 +6,7 @@ log:
 
 mysql:
   addr: "mysql:3306"
-  dsn: "root:888888@tcp(127.0.0.1:3306)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8,utf8mb4"
+  dsn: "root:888888@tcp(mysql:33066)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8,utf8mb4"
   readDSN:
     - "root:Hitosea@123..@tcp(mysql:3306)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8,utf8mb4"
   idleTimeout: "4h"
