--- a/deploy/docker/config/interface/group.yaml.template
+++ b/deploy/docker/config/interface/group.yaml.template
@@ -38,7 +38,7 @@ register:
 discovers:
   group:
     name: "group_service"
-    addr: "group_service:10005"
+    addr: "msg_service:10005"
     dial: "3000ms"
     timeout: "5000ms"
   relation:
