--- a/deploy/docker/config/interface/relation.yaml.template
+++ b/deploy/docker/config/interface/relation.yaml.template
@@ -8,7 +8,7 @@ mysql:
   addr: "mysql:3306"
   dsn: "root:888888@tcp(mysql:33066)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8,utf8mb4"
   readDSN:
-    - "root:Hitosea@123..@tcp(mysql:3306)/bbq?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8,utf8mb4"
+    - "root:Hitosea@123..@tcp(mysql:3306)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8,utf8mb4"
   idleTimeout: "4h"
   queryTimeout: "800ms"
   execTimeout: "800ms"
@@ -24,30 +24,25 @@ redis:
   idleTimeout: "10s"
 
 http:
-  addr: "0.0.0.0:8084"
+  addr: "0.0.0.0:8082"
 
 grpc:
   addr: "127.0.0.1:10002"
 
 # 注册本服务
 register:
-  name: "user-bff"
+  name: "relation-bff"
   addr: "注册中心地址"
-  tags: ["消息服务", "message_service"]
+  tags: ["关系bff服务", "relation_service"]
 
 discovers:
-  group:
-    name: "group_service"
-    addr: "group_service:10005"
+  user:
+    name: "user_service"
+    addr: "user_service:10002"
     dial: "3000ms"
     timeout: "5000ms"
   relation:
     name: "relation_service"
     addr: "relation_service:10001"
-    dial: "3000ms"
-    timeout: "5000ms"
-  user:
-    name: "user_service"
-    addr: "user_service:10002"
     dial: "3000ms"
     timeout: "5000ms"
