build: makefile添加生成swagger文档命令 chore: 修改忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .idea/
 /deploy/docker/data
-/deploy/docker/config/**.yaml
+/deploy/docker/config/**/*.yaml
+/interface/**/*.yaml
+/service/**/*.yaml
