feat(storage_bff): 添加storage swag文档 fix: 添加gateway storage配置

--- a/deploy/docker/config/interface/gateway.yaml.template
+++ b/deploy/docker/config/interface/gateway.yaml.template
@@ -56,3 +56,8 @@ discovers:
     addr: "group_bff:8084"
     dial: "3000ms"
     timeout: "5000ms"
+  storage:
+    name: "storage_bff"
+    addr: "storage_bff:8085"
+    dial: "3000ms"
+    timeout: "5000ms"
