--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -37,8 +37,8 @@ services:
     - "9000"
     - "9001"
     environment:
-      MINIO_ROOT_USER: ROOTUSER
-      MINIO_ROOT_PASSWORD: CHANGEME123
+      MINIO_ROOT_USER: root
+      MINIO_ROOT_PASSWORD: Hitosea@123..
     volumes:
       - ./data/var/lib/minio:/data
     command: server /data --console-address ":9001"
