fix(msg_bff group_bff): 实体删除字段设置默认值，msg_bff group_bff添加配置文件信息

--- a/interface/group/config/config.yaml.template
+++ b/interface/group/config/config.yaml.template
@@ -51,3 +51,8 @@ discovers:
     addr: "user_service:10002"
     dial: "3000ms"
     timeout: "5000ms"
+  msg:
+    name: "msg_service"
+    addr: "msg_service:10000"
+    dial: "3000ms"
+    timeout: "5000ms"
