--- a/.github/workflows/docker_msg_interface.yml
+++ b/.github/workflows/docker_msg_interface.yml
@@ -8,6 +8,7 @@ on:
        - 'master'
     paths:
       - 'pkg/config/**.go'
+      - 'pkg/http/**.go'
       - 'docs/msg*.*'
       - 'interface/msg/**'
 jobs:
