fix(storage_bff docker-compose): 修复上传文件类型解析失败处理，修改docker-compose storage_bff服务名称

--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -119,7 +119,7 @@ services:
     environment:
       SOME_VARIABLE: some_value
     restart: on-failure
-  storgae_bff:
+  storage_bff:
     container_name: cossim_storgae_bff
     image: hub.hitosea.com/cossim/storage-interface
     command:
