--- a/deploy/docker/config/interface/storage.yaml.template
+++ b/deploy/docker/config/interface/storage.yaml.template
@@ -11,6 +11,17 @@ mysql:
 http:
   addr: "0.0.0.0:8085"
 
+oss:
+  minio:
+    name: "minio"
+    addr: "minio:9000"
+    accessKey: ""
+    secretKey: ""
+    ssl: false
+    presignedExpires: ""
+    dial: "3000ms"
+    timeout: "5000ms"
+
 # 注册本服务
 register:
   name: "upload_bff"
@@ -21,15 +32,6 @@ discovers:
   storage:
     name: "storage_service"
     addr: "storage_service:10006"
-    dial: "3000ms"
-    timeout: "5000ms"
-  minio:
-    name: "minio"
-    addr: "minio:9000"
-    accessKey: "E003IlrA7X83C5hmS6oV"
-    secretKey: "Ns7lKyU9JWPpQ21L6z6SMOMzx1ZgX2dxFQTRKZcs"
-    ssl: false
-    presignedExpires: ""
     dial: "3000ms"
     timeout: "5000ms"
   gateway:
