--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -43,10 +43,19 @@ services:
       - ./data/var/lib/minio:/data
     command: server /data --console-address ":9001"
   rabbitmq:
-    image: "rabbitmq:latest"
+    image: "rabbitmq:management"
+    container_name: cossim_rabbitmq
+    hostname: rabbitmq3-management-master
+    logging:
+      driver: json-file
+      options:
+        max-size: "100m"
+        max-file: "1"
+    volumes:
+    - "./data/var/lib/rabbitmq:/var/lib/rabbitmq"
     ports:
-      - "5672:5672"
-      - "15672:15672"
+    - "5672:5672"
+    - "15672:15672"
     environment:
       RABBITMQ_DEFAULT_USER: root
       RABBITMQ_DEFAULT_PASS: Hitosea@123..
