fix(msg_bff): 修复数据库字符集配置导致的无法存储标签的错误

--- a/deploy/docker/config/interface/msg.yaml.template
+++ b/deploy/docker/config/interface/msg.yaml.template
@@ -6,7 +6,7 @@ log:
 
 mysql:
   addr: "mysql:3306"
-  dsn: "root:888888@tcp(mysql:33066)/coss?allowNativePasswords=true&parseTime=true&loc=Local&charset=utf8,utf8mb4"
+  dsn: "root:888888@tcp(mysql:33066)/coss?allowNativePasswords=true&parseTime=true&loc=Local&charset=utf8mb4"
   root_password: "888888"
   database: "coss"
   user: "coss"
