ci: 优化工作流匹配条件

--- a/.github/workflows/docker_gateway.yml
+++ b/.github/workflows/docker_gateway.yml
@@ -8,7 +8,7 @@ on:
       - 'master'
     paths:
       - 'pkg/config/**.go'
-      - 'interface/gateway/**'
+      - 'interface/gateway/**.go'
 jobs:
   build_gateway:
     runs-on: ubuntu-latest
