--- a/.github/workflows/docker_relation_service.yml
+++ b/.github/workflows/docker_relation_service.yml
@@ -8,7 +8,7 @@ on:
        - 'master'
     paths:
       - 'pkg/config/**.go'
-      - 'service/relation/**'
+      - 'service/relation/**.go'
 jobs:
   build_relation_service:
     runs-on: ubuntu-latest
