feat(relation): 完善关系服务的好友和群聊基础功能，更新swagger文档

--- a/interface/relation/config/config.yaml.template
+++ b/interface/relation/config/config.yaml.template
@@ -58,3 +58,6 @@ discovers:
     addr: "msg_service:10000"
     dial: "3000ms"
     timeout: "5000ms"
+  group:
+    name: "group_service"
+    addr: "group_service:10005"
