feat:添加退出登录功能，集成redis

--- a/interface/relation/config/config.yaml.template
+++ b/interface/relation/config/config.yaml.template
@@ -15,13 +15,10 @@ mysql:
   tranTimeout: "100ms"
 
 redis:
-  name: "user-bff"
   proto: "tcp"
-  addr: "172.16.38.91:6379"
-  dialTimeout: "1s"
-  readTimeout: "1s"
-  writeTimeout: "1s"
-  idleTimeout: "10s"
+  addr: "redis:6379"
+  password: "Hitosea@123.."
+#  protocol: 3
 
 message_queue:
   name: "rabbitmq"
