--- a/interface/storage/config/config.yaml.template
+++ b/interface/storage/config/config.yaml.template
@@ -20,6 +20,12 @@ oss:
     ssl: false
     presignedExpires: ""
 
+redis:
+  proto: "tcp"
+  addr: "redis:6379"
+  password: "Hitosea@123.."
+#  protocol: 3
+
 # 注册本服务
 register:
   name: "upload_bff"
