--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -59,6 +59,12 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: root
       RABBITMQ_DEFAULT_PASS: Hitosea@123..
+  redis:
+    image: redis:latest
+    container_name: cossim_redis
+    ports:
+      - 6379:6379
+    command: redis-server --requirepass Hitosea@123..
   gateway:
     container_name: cossim_gateway
     image: hub.hitosea.com/cossim/gateway-interface
