--- a/interface/msg/config/config.yaml.template
+++ b/interface/msg/config/config.yaml.template
@@ -19,6 +19,12 @@ message_queue:
   addr: "rabbitmq:5672"
   port: "5672"
 
+redis:
+  proto: "tcp"
+  addr: "redis:6379"
+  password: "Hitosea@123.."
+#  protocol: 3
+
 http:
   addr: "0.0.0.0:8081"
 
