--- a/interface/relation/config/config.yaml.template
+++ b/interface/relation/config/config.yaml.template
@@ -20,6 +20,10 @@ redis:
   password: "Hitosea@123.."
 #  protocol: 3
 
+dtm:
+  name: "dtm"
+  addr: "dtm:36790"
+
 message_queue:
   name: "rabbitmq"
   username: ""
