feat(group relation): 创建群聊引入分布式事务

--- a/interface/group/config/config.yaml.template
+++ b/interface/group/config/config.yaml.template
@@ -20,6 +20,10 @@ redis:
   password: "Hitosea@123.."
 #  protocol: 3
 
+dtm:
+  name: "dtm"
+  addr: "dtm:36790"
+
 http:
   addr: "0.0.0.0:8084"
 
