--- a/deploy/docker/config/interface/relation.yaml.template
+++ b/deploy/docker/config/interface/relation.yaml.template
@@ -5,60 +5,58 @@ log:
   format: "console" # console、json
 
 mysql:
-  addr: "mysql:3306"
-  dsn: "root:Hitosea@123.@tcp(mysql:3306)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
-  readDSN:
-    - "root:Hitosea@123..@tcp(mysql:3306)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
-  idleTimeout: "4h"
-  queryTimeout: "800ms"
-  execTimeout: "800ms"
-  tranTimeout: "100ms"
+  address: "mysql"
+  port: 3306
+  dsn: "root:888888@tcp(mysql:33066)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
+
+redis:
+  proto: "tcp"
+  address: "redis"
+  port: 6379
+  password: "Hitosea@123.."
+#  protocol: 3
 
 message_queue:
   name: "rabbitmq"
   username: ""
   password: ""
-  addr: "rabbitmq:5672"
+  address: "rabbitmq"
   port: "5672"
 
 dtm:
   name: "dtm"
-  addr: "dtm:36790"
-
-redis:
-  proto: "tcp"
-  addr: "redis:6379"
-  password: "Hitosea@123.."
-#  protocol: 3
+  address: "dtm"
+  port: 36790
 
 http:
-  addr: "0.0.0.0:8082"
+  address: "0.0.0.0"
+  port: "8082"
 
 grpc:
-  addr: "127.0.0.1:10002"
+  address: "0.0.0.0"
+  port:
 
 # 注册本服务
 register:
-  name: "relation-bff"
-  addr: "注册中心地址"
-  tags: ["关系bff服务", "relation_service"]
+  name: "relation_bff"
+  address: "registry"   # 注册中心地址
+  port: 8500            # 注册中心端口
+  tags: ["relation", "bff", "关系服务"]
 
 discovers:
   user:
     name: "user_service"
-    addr: "user_service:10002"
-    dial: "3000ms"
-    timeout: "5000ms"
+    address: "user_service"
+    port: "10002"
   relation:
     name: "relation_service"
-    addr: "relation_service:10001"
-    dial: "3000ms"
-    timeout: "5000ms"
+    address: "relation_service"
+    port: "10001"
   msg:
     name: "msg_service"
-    addr: "msg_service:10000"
-    dial: "3000ms"
-    timeout: "5000ms"
+    address: "msg_service"
+    port: "10000"
   group:
     name: "group_service"
-    addr: "group_service:10005"
+    address: "group_service"
+    port: "10005"
