--- a/deploy/docker/config/interface/user.yaml.template
+++ b/deploy/docker/config/interface/user.yaml.template
@@ -5,39 +5,41 @@ log:
   format: "console" # console、json
 
 mysql:
-  addr: "mysql:3306"
-  dsn: "root:888888@tcp(mysql:33066)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
-  readDSN:
-    - "root:Hitosea@123..@tcp(mysql:3306)/bbq?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
-  idleTimeout: "4h"
-  queryTimeout: "800ms"
-  execTimeout: "800ms"
-  tranTimeout: "100ms"
+  address: "mysql"
+  port: 3306
+  dsn: "root:Hitosea@123..@tcp(mysql:3306)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
 
 redis:
   proto: "tcp"
-  addr: "redis:6379"
+  address: "redis"
+  port: 6379
   password: "Hitosea@123.."
 #  protocol: 3
+
 http:
-  addr: "0.0.0.0:8083"
+  address: "0.0.0.0"
+  port: 8083
 
 grpc:
-  addr: "127.0.0.1:10003"
+  address: "0.0.0.0"
+  port: 10003
 
 # 注册本服务
 register:
   name: "user_bff"
-  addr: "注册中心地址"
-  tags: ["消息服务", "user_service"]
+  address: "registry"   # 注册中心地址
+  port: 8500            # 注册中心端口
+  tags: ["user", "bff"]
 
 discovers:
   user:
     name: "user_service"
-    addr: "user_service:10002"
+    address: "0.0.0.0"
+    port: 10002
   relation:
     name: "relation_service"
-    addr: "relation_service:10001"
+    address: "0.0.0.0"
+    port: 10001
 
 encryption:
   enabled: true
