--- a/deploy/docker/config/service/group.yaml.template
+++ b/deploy/docker/config/service/group.yaml.template
@@ -5,30 +5,32 @@ log:
   format: "console" # console、json
 
 mysql:
-  addr: "mysql:3306"
+  address: "mysql"
+  port: 3306
   dsn: "root:Hitosea@123..@tcp(mysql:3306)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
-  readDSN:
-    - "root:Hitosea@123..@tcp(mysql:3306)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
-  idleTimeout: "4h"
-  queryTimeout: "800ms"
-  execTimeout: "800ms"
-  tranTimeout: "100ms"
+
+message_queue:
+  name: "rabbitmq"
+  username: ""
+  password: ""
+  addr: "rabbitmq:5672"
+  port: "5672"
 
 redis:
-  name: "user-bff"
   proto: "tcp"
-  addr: "172.16.38.91:6379"
-  dialTimeout: "1s"
-  readTimeout: "1s"
-  writeTimeout: "1s"
-  idleTimeout: "10s"
+  address: "redis"
+  port: 6379
+  password: "Hitosea@123.."
+#  protocol: 3
 
 grpc:
-  addr: "0.0.0.0:10005"
+  address: "0.0.0.0"
+  port: 10005
 
 # 注册本服务
 register:
   name: "group_service"
-  addr: "注册中心地址"
-  tags: ["消息服务", "user_service"]
+  address: "registry"   # 注册中心地址
+  port: 8500            # 注册中心端口
+  tags: ["group", "service", "群组服务"]
 
