--- a/deploy/docker/config/service/relation.yaml.template
+++ b/deploy/docker/config/service/relation.yaml.template
@@ -5,30 +5,31 @@ log:
   format: "console" # console、json
 
 mysql:
-  addr: "mysql:3306"
+  address: "mysql"
+  port: 3306
   dsn: "root:Hitosea@123..@tcp(mysql:3306)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
-  readDSN:
-    - "root:Hitosea@123..@tcp(mysql:3306)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
-  idleTimeout: "4h"
-  queryTimeout: "800ms"
-  execTimeout: "800ms"
-  tranTimeout: "100ms"
 
 redis:
-  name: "user-bff"
   proto: "tcp"
-  addr: "172.16.38.91:6379"
-  dialTimeout: "1s"
-  readTimeout: "1s"
-  writeTimeout: "1s"
-  idleTimeout: "10s"
+  address: "redis"
+  port: 6379
+  password: "Hitosea@123.."
+#  protocol: 3
+
+message_queue:
+  name: "rabbitmq"
+  username: ""
+  password: ""
+  address: "rabbitmq"
+  port: "5672"
 
 grpc:
-  addr: "0.0.0.0:10001"
+  address: "0.0.0.0"
+  port: "10001"
 
 # 注册本服务
 register:
   name: "relation_service"
-  addr: "注册中心地址"
-  tags: ["关系服务", "relation_service"]
-
+  address: "registry"   # 注册中心地址
+  port: 8500            # 注册中心端口
+  tags: ["relation", "service", "关系服务"]
