--- a/deploy/docker/config/service/storage.yaml.template
+++ b/deploy/docker/config/service/storage.yaml.template
@@ -5,15 +5,18 @@ log:
   format: "console" # console、json
 
 mysql:
-  addr: "mysql:3306"
+  address: "mysql"
+  port: 3306
   dsn: "root:Hitosea@123..@tcp(mysql:3306)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
 
 grpc:
-  addr: "0.0.0.0:10006"
+  address: "0.0.0.0"
+  port: 10006
 
 # 注册本服务
 register:
   name: "storage_service"
-  addr: "注册中心地址"
-  tags: ["存储服务", "storage_service"]
+  address: "registry"   # 注册中心地址
+  port: 8500            # 注册中心端口
+  tags: ["storage", "service","存储服务"]
 
