--- a/interface/group/config/config.yaml.template
+++ b/interface/group/config/config.yaml.template
@@ -5,18 +5,14 @@ log:
   format: "console" # console、json
 
 mysql:
-  addr: "mysql:3306"
+  address: "mysql"
+  port: 3306
   dsn: "root:888888@tcp(mysql:33066)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
-  readDSN:
-    - "root:Hitosea@123..@tcp(mysql:3306)/bbq?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
-  idleTimeout: "4h"
-  queryTimeout: "800ms"
-  execTimeout: "800ms"
-  tranTimeout: "100ms"
 
 redis:
   proto: "tcp"
-  addr: "redis:6379"
+  address: "redis"
+  port: 6379
   password: "Hitosea@123.."
 #  protocol: 3
 
@@ -24,43 +20,43 @@ message_queue:
   name: "rabbitmq"
   username: "root"
   password: "Hitosea@123.."
-  addr: "rabbitmq:5672"
-  port: "5672"
+  address: "rabbitmq"
+  port: 5672
 
 dtm:
   name: "dtm"
-  addr: "dtm:36790"
+  address: "dtm"
+  port: 36790
 
 http:
-  addr: "0.0.0.0:8084"
+  address: "0.0.0.0"
+  port: 8084
 
 grpc:
-  addr: "127.0.0.1:10002"
+  address: "0.0.0.0"
+  port: 10002
 
 # 注册本服务
 register:
-  name: "user-bff"
-  addr: "注册中心地址"
-  tags: ["消息服务", "message_service"]
+  name: "group_bff"
+  address: "registry"   # 注册中心地址
+  port: 8500            # 注册中心端口
+  tags: ["group", "bff", "群组服务"]
 
 discovers:
   group:
     name: "group_service"
-    addr: "group_service:10005"
-    dial: "3000ms"
-    timeout: "5000ms"
+    address: "group_service"
+    port: "10005"
   relation:
     name: "relation_service"
-    addr: "relation_service:10001"
-    dial: "3000ms"
-    timeout: "5000ms"
+    address: "relation_service"
+    port: "10001"
   user:
     name: "user_service"
-    addr: "user_service:10002"
-    dial: "3000ms"
-    timeout: "5000ms"
+    address: "user_service"
+    port: "10002"
   msg:
     name: "msg_service"
-    addr: "msg_service:10000"
-    dial: "3000ms"
-    timeout: "5000ms"
+    address: "msg_service"
+    port: "10000"
