fix:优化现有本地事务

--- a/interface/msg/config/config.yaml.template
+++ b/interface/msg/config/config.yaml.template
@@ -45,7 +45,7 @@ discovers:
     port: "10000"
   relation:
     name: "relation_service"
-    address: "group_service"
+    address: "relation_service"
     port: "10001"
   user:
     name: "user_service"
